# laxyfile

./: .gitignore  CODECOV_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  LICENSE  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  codecov.yml  example_config.yaml  main.py  optimize_laxyfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_laxyfile.py  setup.py  test_error_fixes.py  test_flicker_fix.py  test_integration.py  test_integration_simple.py  test_laxyfile.py  test_media_viewer_fix.py  test_minimal_integration.py  test_nonetype_fix.py  test_performance_optimizations.py  test_preview_fix.py
.github/workflows/: release.yml  test.yml
docs/: api-reference.md  architecture.md  codecov-setup.md  configuration-guide.md  getting-started.md  user-manual.md
docs/tutorials/: interactive-tutorial.py  video-scripts.md
laxyfile/: __init__.py  __main__.py  main.py  main_integrated.py
laxyfile/ai/: __init__.py  advanced_assistant.py  assistant.py  file_analyzer.py  organization_engine.py  security_analyzer.py
laxyfile/core/: __init__.py  advanced_file_manager.py  component_initializer.py  config.py  error_handling_mixin.py  exceptions.py  file_manager.py  file_manager_service.py  file_type_detector.py  initialization_models.py  types.py  (+3 more)
scripts/: build_release.py  create_changelog.py  create_chocolatey_package.py  create_homebrew_formula.py  deploy_all.py  deploy_pypi.py  install.py  run_coverage.py  uninstall.py  validate_deployment.py
tests/: INTEGRATION_E2E_SUMMARY.md  README.md  __init__.py  conftest.py  run_tests.py
(+72 files in other folders)
